--- a/src/main/webapp/views/ProyeccionProgramacionMantenimientosPreventivos/index.xhtml
+++ b/src/main/webapp/views/ProyeccionProgramacionMantenimientosPreventivos/index.xhtml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <ui:composition template="/WEB-INF/templates/commonLayout.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
+
     <ui:define name="content">
         <ui:include src="../common/Print.xhtml"/>
-
         <h:form id="form">
+
             <div align="center" style="border: 1px black solid">
-                <h3 align="center">Proyeccion de Efectividad de Reparacion Versus Tiempo</h3>
+                <h3 align="center">Proyeccion y Programacion de Mantenimientos Preventivos</h3>
                 <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
                 <p:panelGrid  columns="2" columnClasses="column">
                     <p:column>
@@ -21,22 +23,14 @@
                         <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
                     </p:column>
                     <p:column>
-                        <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_proyeccion_de_efectividad_reparacion_tiempo" />
+                        <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_tasaExito/fallo" />
                     </p:column>
                 </p:panelGrid>
 
                 <p:growl id="msgs" showDetail="true" />
-                <h:panelGrid columns="2"  cellpadding="5" >
 
-                    <p:column>
-                        <p:outputLabel value="Area Hospitalaria" for="area" />
-                    </p:column>
-                    <p:column>
-                        <p:selectOneMenu id="area" value="#{proyeccionEfectividadReparacionTiempoManagedBean.area}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
-                            <f:selectItem itemLabel="Seleccione Area Hospitalaria" />
-                            <f:selectItems value="#{proyeccionEfectividadReparacionTiempoManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
-                        </p:selectOneMenu>
-                    </p:column>
+                <h:panelGrid columns="2" cellpadding="5">
+
 
                     <p:column>
                         <p:outputLabel value="Equipo" for="equipox" />
@@ -48,18 +42,39 @@
                         </p:selectOneMenu>
                     </p:column>
 
-                    <p:column>
-                        <p:outputLabel value="Tecnicos" for="tecnico" />
-                    </p:column>
-                    <p:column>
-                        <p:selectOneMenu id="tecnico" value="#{proyeccionEfectividadReparacionTiempoManagedBean.tecnico}" converter="#{empleadoConverter}" effect="fade"  style="width:200px" >
-                            <f:selectItem itemLabel="Seleccione Tecnico" />
-                            <f:selectItems value="#{proyeccionEfectividadReparacionTiempoManagedBean.empleadoList}" var="categorias" itemLabel="#{categorias.nombreEmpleado}" itemValue="#{categorias}" />       
-                        </p:selectOneMenu>
-                    </p:column>  
 
+                    <!--                        <p:dataTable var="car" value="Equipo">
+                                                <p:column headerText="Equipo">
+                                                    <h:selectBooleanCheckbox value="" />
+                                                    <h:outputText value="Equipo" />
+                                                </p:column>
+                    
+                                                <p:column headerText="Diario">
+                                                    <h:selectBooleanCheckbox value="" />
+                                                    <h:outputText value="uno" />
+                                                </p:column>
+                    
+                                                <p:column headerText="Semanal">
+                                                    <h:selectBooleanCheckbox value="" />
+                                                    <h:outputText value="uno" />
+                                                </p:column>
+                    
+                                                <p:column headerText="Quincenal">
+                                                    <h:selectBooleanCheckbox value="" />
+                                                    <h:outputText value="uno" />
+                                                </p:column>
+                    
+                                                <p:column headerText="Mensual">
+                                                    <h:selectBooleanCheckbox value="" />
+                                                    <h:outputText value="uno" />
+                                                </p:column>
+
+
+
+                    </p:dataTable>-->
 
                 </h:panelGrid>
+
                 <h:panelGrid columns="2"  cellpadding="5">
                     <f:facet name="footer">
                         <div class="footer-section">
@@ -70,7 +85,8 @@
                             <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
                         </div>
                     </f:facet>
-                </h:panelGrid>
+                </h:panelGrid>   
+
             </div>
 
         </h:form>
