--- a/src/main/webapp/views/ProyeccionTecnicoTiempo/index.xhtml
+++ b/src/main/webapp/views/ProyeccionTecnicoTiempo/index.xhtml
@@ -11,77 +11,90 @@
     <ui:define name="content">
         <ui:include src="../common/Print.xhtml"/>
         <h:form id="form">
-            <p:fieldset legend="Parametros de busqueda." style="width: 70%; margin: auto;">
-                <div align="center" style="border: 1px black solid">
-                    <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
-                    <p:panelGrid  columns="2" columnClasses="column">
-                        <p:column>
-                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{tasaExitoFalloReparacionesManagedBean.fechaEmision}"  />
-                        </p:column>
-                        <p:column>                                
-                            <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
-                        </p:column>
-                        <p:column>
-                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_tasaExito/fallo" />
-                        </p:column>
-                    </p:panelGrid>
 
-                    <h2 align="center">Proyeccion Tecnico Tiempo Requerido Para Solventar Un Inconveniente</h2>
+            <div align="center" style="border: 1px black solid">
+                <h3 align="center">Proyeccion Tecnico Tiempo Requerido Para Solventar Un Inconveniente</h3>
+                <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
+                <p:panelGrid  columns="2" columnClasses="column">
+                    <p:column>
+                        <h:outputLabel for="fechaActual" value="Fecha de Emision : #{proyeccionTecnicoTiempoManagedBean.fecha}"  />
+                    </p:column>
+                    <p:column>                                
+                        <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
+                    </p:column>
+                    <p:column>
+                        <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_tasaExito/fallo" />
+                    </p:column>
+                </p:panelGrid>
+
+                <p:growl id="msgs" showDetail="true" />
+
+                <h:panelGrid columns="2" cellpadding="5">
+                    <p:column>
+                        <p:outputLabel value="Tecnicos No sub" for="tecnico" />
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="tecnico" value="#{proyeccionTecnicoTiempoManagedBean.tecnico}" converter="#{empleadoConverter}" effect="fade"  style="width:200px" >
+                            <f:selectItem itemLabel="Seleccione Tecnico" />
+                            <f:selectItems value="#{proyeccionTecnicoTiempoManagedBean.empleadoList}" var="categorias" itemLabel="#{categorias.nombreEmpleado}" itemValue="#{categorias}" />       
+                        </p:selectOneMenu>
+                    </p:column> 
+
+                    <p:column>  <!-- tenias mal las fecha asi deben de ser ojo en el for=id-->
+                        <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:calendar id="fhInicial" value="#{proyeccionTecnicoTiempoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel for="fhFin"  value="Fecha Final:" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:calendar id="fhFin" value="#{proyeccionTecnicoTiempoManagedBean.date2}"  pattern="dd-MM-yyyy" />
+                        <span>&nbsp;</span>
+                    </p:column>
+
+                    <p:column>
+                        <p:outputLabel  value="Reparaciones Finalizadas" />
+                    </p:column>
+                    <p:column>
+                        <p:selectBooleanCheckbox value="#{proyeccionTecnicoTiempoManagedBean.value1}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="Reparaciones Fallidas" />
+                    </p:column>
+                    <p:column>
+                        <p:selectBooleanCheckbox value="#{proyeccionTecnicoTiempoManagedBean.value2}" />
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel  value="Promedio del tiempo tardado en reparacion" />
+                    </p:column>
+                    <p:column>
+                        <p:selectBooleanCheckbox value="#{proyeccionTecnicoTiempoManagedBean.value3}" />
+                    </p:column>
 
 
 
-                    <h:panelGrid  columnClasses="column">
 
+                </h:panelGrid>
 
-                        <p:column>  <!-- tenias mal las fecha asi deben de ser ojo en el for=id-->
-                            <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:calendar id="fhInicial" value="#{gastoDepreciacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:outputLabel for="fhFin"  value="Fecha Final:" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:calendar id="fhFin" value="#{gastoDepreciacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
-                            <span>&nbsp;</span>
-                        </p:column>
+                <h:panelGrid columns="2"  cellpadding="5">
+                    <f:facet name="footer">
+                        <div class="footer-section">
+                            <p:commandButton value="Aceptar" update="msgs" actionListener="#{proyeccionTecnicoTiempoManagedBean.click}" icon="ui-icon-check"  />                   
+                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{proyeccionTecnicoTiempoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
 
-                        <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                            <p:selectBooleanCheckbox value="" />
-                            <h:outputText value="Reparaciones Finalizadas" />
+                            <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                            <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                        </div>
+                    </f:facet>
+                </h:panelGrid>  
 
+            </div>        
 
-                            <p:selectBooleanCheckbox value=""/>
-                            <h:outputText value="Reparaciones Fallidas" />
-
-
-
-                            <p:selectBooleanCheckbox value=""/>
-                            <h:outputText value="Promedio del tiempo tardado en reparacion" />
-
-
-                        </h:panelGrid>
-
-                    </h:panelGrid>
-
-                    <h:panelGrid columns="2"  cellpadding="5">
-                        <f:facet name="footer">
-                            <div class="footer-section">
-                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />                   
-                                <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
-
-                                <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
-                                <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
-                            </div>
-                        </f:facet>
-                    </h:panelGrid>  
-
-                </div>        
-            </p:fieldset> 
         </h:form>
     </ui:define>
 </ui:composition>
